--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles/tailwind.css", "src/styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles/tailwind.css",
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -77,7 +81,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.css"
+            ],
             "scripts": []
           }
         }
