--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles/tailwind.css",
+              "src/Styles/tailwind.css",
               "src/styles.css"
             ],
             "scripts": []
